<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="stepsViewModel"
            type="com.example.anuja.bakingapp.viewmodel.RecipeStepsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            tools:context="com.example.anuja.bakingapp.app.fragments.RecipeStepsFragment">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/player_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setPlayerView="@{stepsViewModel.isExoPlayerInitialized}" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <ImageView
                android:id="@+id/iv_steps_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:setStepThumbnail="@{stepsViewModel.stepThumbnailUrl}"
                app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
                tools:src="@drawable/ic_restaurant" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_instructions"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@{stepsViewModel.strInstructions}"
                app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline"
                tools:text="Instructions" />

            <android.support.constraint.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.85" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/previousStepBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custom_button"
                android:onClick="@{(v)->stepsViewModel.onPreviousBtnClicked(v)}"
                android:text="@string/previous_step"
                android:textColor="@color/white"
                android:visibility="@{stepsViewModel.previousButtonVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottom_guideline" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/nextStepBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custom_button"
                android:onClick="@{(v)->stepsViewModel.onNextBtnClicked(v)}"
                android:text="@string/next_step"
                android:textColor="@color/white"
                android:visibility="@{stepsViewModel.nextButtonVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottom_guideline" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>